tests/negative/parser_bad11.sp
(* global declaration without type *)


b = 10;

main : Int () {
	return 0;
}
